Laying out brand colours

--- a/app.css
+++ b/app.css
@@ -1,20 +1,25 @@
 @import "tailwindcss";
 
-@theme {
-  /* Testing zone */
-  --color-brand-primary: #287271;
+body {
+  background-color: var(--color-brand-background);
+  padding: 0 2rem;
+}
 
-  /* Real zone */
+@theme {
+  --color-brand-background: #F0F0F0;
+
   --color-brand-primary-100: #F3F7F7; /* Badge backgrounds */
-  /* --color-brand-200: #88E5F1;
-  --color-brand-300: #63DDED;
-  --color-brand-400: #3FD5E9;
-  --color-brand-500: #1ACDE4;
-  --color-brand-600: #16ACC0; */
   --color-brand-primary-700: #128B9B; /* Main blue/green */
-  /* --color-brand-800: #0C5E69;
-  --color-brand-900: #063136; */
 
   --color-brand-light: #ffffff; /* Generic light */
   --color-brand-dark: #042F2E; /* All text */
+
+  --color-brand-border: #E5E7EB;
+}
+
+@layer components {
+  /* New card container component */
+  .card-container {
+    @apply rounded-md mb-4;
+  }
 }
