Setting up basic navigation partial

--- a/app.css
+++ b/app.css
@@ -20,6 +20,6 @@ body {
 @layer components {
   /* New card container component */
   .card-container {
-    @apply rounded-lg mb-4;
+    @apply rounded-2xl mb-3;
   }
 }
