--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,4 +1,4 @@
-<header x-data="navigationMenu()">
+<header x-data="navigationMenu()" class="relative z-50">
   <div class="bg-brand-primary-700 px-4 py-2 text-brand-light card-container">
     <p class="text-center text-sm">
       Lorem, ipsum dolor
