--- a/partials/home/hero.html
+++ b/partials/home/hero.html
@@ -20,7 +20,7 @@
           <div class="relative z-10 container mx-auto px-8 flex justify-center">
             <div class="max-w-4xl flex flex-col items-center text-center gap-4">
               <div class="badge-transparent">
-                <span class="relative flex size-2">
+                <span class="relative flex size-2 -ml-1">
                   <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-primary-700 opacity-75"></span>
                   <span class="relative inline-flex size-2 rounded-full bg-brand-primary-700"></span>
                 </span>
