--- a/partials/home/hero.html
+++ b/partials/home/hero.html
@@ -1,134 +1,58 @@
 <div
-  x-data
-  x-init="new Swiper($refs.swiper, {
-    slidesPerView: 1,
-    loop: true,
-    pagination: { el: $refs.pagination, clickable: true },
-    navigation: { nextEl: $refs.next, prevEl: $refs.prev }
+  x-data="{ slides: 4 }"
+  x-init="$nextTick(() => {
+    new Swiper($refs.swiper, {
+      slidesPerView: 1,
+      loop: true,
+      pagination: { el: $refs.pagination, clickable: true },
+      navigation: { nextEl: $refs.next, prevEl: $refs.prev }
+    })
   })"
-  class="relative card-container overflow-hidden"
+  class="relative card-container p-0 overflow-hidden"
 >
   <div x-ref="swiper" class="swiper h-150">
     <div class="swiper-wrapper">
-      <!-- Slide 1 -->
-      <div class="swiper-slide">
-        <div
-          class="relative h-full bg-cover bg-center flex items-center"
-          style="background-image: url('/assets/banners/banner-image.png');"
-        >
-          <div class="absolute inset-0 bg-black/50"></div>
-          <div class="relative z-10 container mx-auto px-8 flex justify-center">
-            <div class="max-w-4xl flex flex-col items-center text-center gap-4">
-              <div class="badge-transparent">
-                <span class="relative flex size-2 -ml-1">
-                  <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-primary-700 opacity-75"></span>
-                  <span class="relative inline-flex size-2 rounded-full bg-brand-primary-700"></span>
-                </span>
-                Welcome to Wigmore Medical
-              </div>
-              <h1 class="heading-primary text-5xl text-brand-light">The UK’s Leading Aesthetic Distributor for Medical Professionals</h1>
-              <p class="text-brand-light max-w-xl text-base">Discover our range of premium treatments designed to enhance your natural beauty with the latest techniques and technologies.</p>
-              <div class="flex flex-row gap-4 mt-2">
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                  Join Now
-                </a>
-                <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                  Join Now
-                  <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
-                    <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+      <template x-for="i in slides" :key="i">
+        <!-- Slide 1 -->
+        <div class="swiper-slide">
+          <div
+            class="relative h-full bg-cover bg-center flex items-center"
+            style="background-image: url('/assets/banners/banner-image.png');"
+          >
+            <div class="absolute inset-0 bg-black/50"></div>
+            <div class="relative z-10 container mx-auto px-8 flex justify-center">
+              <div class="max-w-4xl flex flex-col items-center text-center gap-4">
+                <div class="badge-transparent">
+                  <span class="relative flex size-2 -ml-1">
+                    <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-primary-700 opacity-75"></span>
+                    <span class="relative inline-flex size-2 rounded-full bg-brand-primary-700"></span>
                   </span>
-                </a>
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-medium hover:bg-brand-light/20 transition-colors">
-                  Sign in
-                </a>
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
-                  Sign in
-                </a>
+                  Welcome to Wigmore Medical
+                </div>
+                <h1 class="heading-primary text-5xl text-brand-light">The UK’s Leading Aesthetic Distributor for Medical Professionals</h1>
+                <p class="text-brand-light max-w-xl text-base">Discover our range of premium treatments designed to enhance your natural beauty with the latest techniques and technologies.</p>
+                <div class="flex flex-row gap-4 mt-2">
+                  <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+                    Join Now
+                  </a>
+                  <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+                    Join Now
+                    <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
+                      <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+                    </span>
+                  </a>
+                  <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-medium hover:bg-brand-light/20 transition-colors">
+                    Sign in
+                  </a>
+                  <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                    Sign in
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="swiper-slide">
-        <div
-          class="relative h-full bg-cover bg-center flex items-center"
-          style="background-image: url('/assets/banners/banner-image.png');"
-        >
-          <div class="absolute inset-0 bg-black/50"></div>
-          <div class="relative z-10 container mx-auto px-8 flex justify-center">
-            <div class="max-w-4xl flex flex-col items-center text-center gap-4">
-              <div class="badge-transparent">
-                <span class="relative flex size-2">
-                  <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-primary-700 opacity-75"></span>
-                  <span class="relative inline-flex size-2 rounded-full bg-brand-primary-700"></span>
-                </span>
-                Welcome to Wigmore Medical
-              </div>
-              <h1 class="heading-primary text-5xl text-brand-light">The UK’s Leading Aesthetic Distributor for Medical Professionals</h1>
-              <p class="text-brand-light max-w-xl text-base">Discover our range of premium treatments designed to enhance your natural beauty with the latest techniques and technologies.</p>
-              <div class="flex flex-row gap-4 mt-2">
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                  Join Now
-                </a>
-                <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                  Join Now
-                  <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
-                    <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
-                  </span>
-                </a>
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-medium hover:bg-brand-light/20 transition-colors">
-                  Sign in
-                </a>
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
-                  Sign in
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="swiper-slide">
-        <div
-          class="relative h-full bg-cover bg-center flex items-center"
-          style="background-image: url('/assets/banners/banner-image.png');"
-        >
-          <div class="absolute inset-0 bg-black/50"></div>
-          <div class="relative z-10 container mx-auto px-8 flex justify-center">
-            <div class="max-w-4xl flex flex-col items-center text-center gap-4">
-              <div class="badge-transparent">
-                <span class="relative flex size-2">
-                  <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-primary-700 opacity-75"></span>
-                  <span class="relative inline-flex size-2 rounded-full bg-brand-primary-700"></span>
-                </span>
-                Welcome to Wigmore Medical
-              </div>
-              <h1 class="heading-primary text-5xl text-brand-light">The UK’s Leading Aesthetic Distributor for Medical Professionals</h1>
-              <p class="text-brand-light max-w-xl text-base">Discover our range of premium treatments designed to enhance your natural beauty with the latest techniques and technologies.</p>
-              <div class="flex flex-row gap-4 mt-2">
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                  Join Now
-                </a>
-                <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                  Join Now
-                  <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
-                    <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
-                  </span>
-                </a>
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-medium hover:bg-brand-light/20 transition-colors">
-                  Sign in
-                </a>
-                <a href="#" class="px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
-                  Sign in
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      </template>
     </div>
   </div>
 
