--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,12 +1,12 @@
 <header x-data="navigationMenu()" class="relative z-50">
-  <div class="bg-brand-primary-700 px-4 py-1.5 text-brand-light card-container text-center">
+  <div class="bg-brand-primary-700 px-4 py-1.5 text-brand-light rounded-3xl mb-3 text-center">
     <span class="text-xs">
       Lorem, ipsum dolor
       <a href="#" class="inline-block underline"> sit amet consectetur </a>
     </span>
   </div>
-  <div class="border-b border-neutral-200/80 bg-brand-light card-container">
-    <div class="container mx-auto flex justify-between items-center h-16 gap-8">
+  <div class="border-b border-neutral-200/80 bg-brand-light rounded-3xl mb-3">
+    <div class="mx-auto flex justify-between items-center h-16 gap-8">
       <a class="block text-teal-600" href="#">
         <span class="sr-only">Home</span>
         <svg width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +82,7 @@
       x-transition:leave-end="opacity-0 -translate-y-2"
       @mouseenter="cancelClose()" 
       @mouseleave="scheduleClose()"
-      class="absolute container mx-auto left-0 right-0 mt-0 w-full bg-brand-light card-container shadow-md"
+      class="absolute mx-auto left-0 right-0 mt-0 w-full bg-brand-light rounded-3xl mb-3 shadow-md"
       x-cloak>
 
       <div class="w-full">
