--- a/app.css
+++ b/app.css
@@ -10,6 +10,7 @@
   --color-brand-primary-700: #128B9B; /* Main blue/green */
   --color-brand-primary-800: #0F7B89;
   --color-brand-background: #F0F0F0;
+  --color-brand-background-secondary: #F3F4F6;
   --color-brand-light: #FCFCFC; /* Generic light */
   --color-brand-dark: #042F2E; /* All text */
   --color-brand-border: #E5E7EB;
