--- a/partials/home/blog-carousel.html
+++ b/partials/home/blog-carousel.html
@@ -1,9 +1,9 @@
 <style>
-  .offer-slide {
+  .article-slide {
     width: 280px;
   }
   @media (min-width: 1024px) {
-    .offer-slide {
+    .article-slide {
       width: auto;
     }
   }
@@ -48,7 +48,7 @@
       >
         <div class="flex items-center gap-4">
           <!-- Prev Arrow -->
-          <button x-ref="prev" class="absolute -left-10 w-7 h-7 xl:flex hidden items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+          <button x-ref="prev" class="absolute disabled:hidden -left-10 w-7 h-7 xl:flex hidden items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
             <span class="icon icon-arrow w-3 h-3"></span>
           </button>
 
@@ -56,7 +56,7 @@
           <div x-ref="swiper" class="swiper flex-1 overflow-hidden">
             <div class="swiper-wrapper">
               <!-- Card 1 -->
-              <div class="swiper-slide offer-slide">
+              <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
                   <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
                 </div>
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <!-- Card 2 -->
-              <div class="swiper-slide offer-slide">
+              <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
                   <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
                 </div>
@@ -84,7 +84,7 @@
                 </div>
               </div>
               <!-- Card 3 -->
-              <div class="swiper-slide offer-slide">
+              <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
                   <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
                 </div>
@@ -98,7 +98,7 @@
                 </div>
               </div>
               <!-- Card 4 -->
-              <div class="swiper-slide offer-slide">
+              <div class="swiper-slide article-slide">
                 <div class="rounded-xl overflow-hidden mb-2">
                   <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
                 </div>
@@ -115,7 +115,7 @@
           </div>
 
           <!-- Next Arrow -->
-          <button x-ref="next" class="absolute -right-10 w-7 h-7 xl:flex hidden items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+          <button x-ref="next" class="absolute disabled:hidden -right-10 w-7 h-7 xl:flex hidden items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
             <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
           </button>
         </div>
