--- a/partials/home/collections.html
+++ b/partials/home/collections.html
@@ -1,13 +1,13 @@
 <div class="card-container bg-brand-light">
   <div class="card-container-inner">
     <div class="flex flex-col items-center justify-between gap-6">
-      <div class="w-1/2 flex flex-col gap-4 items-center text-center justify-center mb-4">
+      <div class="max-w-lg flex flex-col gap-4 items-center text-center justify-center mb-4">
         <div class="badge-primary">Explore Our Range</div>
         <h1 class="heading-primary text-4xl">Categories</h1>
         <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
 
         <div class="flex flex-row gap-3 mt-2">
-          <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+          <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
             View all offers
           </a>
         </div>
@@ -50,7 +50,7 @@
                     <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
                   </div>
                   <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
+                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-bold tracking-widest">
                       Skincare
                     </div>
                     <span class="icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
@@ -65,7 +65,7 @@
                     <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
                   </div>
                   <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
+                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-bold tracking-widest">
                       Skincare
                     </div>
                     <span class="icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
@@ -80,7 +80,7 @@
                     <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
                   </div>
                   <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
+                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-bold tracking-widest">
                       Skincare
                     </div>
                     <span class="icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
@@ -95,7 +95,7 @@
                     <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
                   </div>
                   <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
+                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-bold tracking-widest">
                       Skincare
                     </div>
                     <span class="icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
@@ -110,7 +110,7 @@
                     <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
                   </div>
                   <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
+                    <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-bold tracking-widest">
                       Skincare
                     </div>
                     <span class="icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
