--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,6 +1,6 @@
 <header x-data="navigationMenu()" class="relative z-50">
   <div class="bg-brand-primary-700 px-4 py-1.5 text-brand-light rounded-3xl mb-3 text-center">
-    <span class="text-xs">
+    <span class="text-sm">
       Lorem, ipsum dolor
       <a href="#" class="inline-block underline"> sit amet consectetur </a>
     </span>
