--- a/app.css
+++ b/app.css
@@ -7,8 +7,8 @@
 
   /* COLOURS */
   --color-brand-primary-100: #F3F7F7; /* Badge backgrounds */
-  --color-brand-primary-700: #128B9B; /* Main blue/green */
-  --color-brand-primary-800: #0F7B89;
+  --color-brand-primary-700: #00857D; /* Main blue/green */
+  --color-brand-primary-800: #01756E;
   --color-brand-background: #F0F0F0;
   --color-brand-background-secondary: #F3F4F6;
   --color-brand-light: #FCFCFC; /* Generic light */
